--- a/Data Preprocessing .ipynb
+++ b/Data Preprocessing .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7977c9b8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "75c2b365",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b5dde6cb",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "4    Sprout Venture Partners            Seed Round     18,00,000     NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "daf85509",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "31437001",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c0ac4d93",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "4    Sprout Venture Partners            Seed Round     18,00,000     NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "58196435",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8dec5787",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "4    Sprout Venture Partners            Seed Round     18,00,000     NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0b0fed2b",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "       'Dallas / Hyderabad'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7f11e2d1",
    "metadata": {},
    "outputs": [],
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "619bd7ca",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2c95c7d9",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "4    Sprout Venture Partners            Seed Round     18,00,000     NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
+   "id": "4d51553e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if the Amount column contains any non-numeric values\n",
+    "if df['Amount'].str.isdigit().any():\n",
+    "    # Remove the row with the non-numeric value\n",
+    "    df = df.dropna(subset=['Amount'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "39d29286",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2084"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Amount'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "ac8fdfe3",
    "metadata": {},
    "outputs": [],
@@ -778,6 +812,14 @@
     "# Save the DataFrame to a CSV file\n",
     "df_Updated.to_csv(csv_file_path, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35e877e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
